--- a/mezzanine_themes/classic/templates/accounts/includes/user_welcome.html
+++ b/mezzanine_themes/classic/templates/accounts/includes/user_welcome.html
@@ -1,7 +1,7 @@
 {% load i18n mezzanine_tags %}
 
 {% if request.user.is_authenticated %}
-    {% url profile user.username as profile_url %}
+    {% url "profile" "user.username" as profile_url %}
     {% if profile_url %}<a href="{{ profile_url }}"
         >{{ request.user.username }}</a>
     {% else %}<a href="{% url profile_update %}"
